Finishing up POST queries and cleaning up Implemented the final POST queries for inventory and address and cleaned up some small things in the documentation and items route controller
